--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
     <section class="page">
-        <div class="container">
-            <div class="card">
-                <div>
-                    <img class="img" src="/cactus_img.jpg" alt="imagen_de_cactus">
-                </div>
-                <div class="tag">
-                    <p>Design</p>
-                </div>
-                <div class="description">
-                    <h1>Embracing Minimalism</h1>
-                    <p>From minimalist sculptures to minimalist paintings, this blog will inspire you to appreciate the beauty that lies in simplicity.</p>
-                </div>
-            </div>
-            <div class="small">
-                <p>Annie Spratt</p>
-            </div>
+      <div class="container">
+        <div class="card">
+          <div>
+            <img class="img" src="/cactus_img.jpg" alt="imagen_de_cactus" />
+          </div>
+          <div class="tag">
+            <p>Design</p>
+          </div>
+          <div class="description">
+            <h1>Embracing Minimalism</h1>
+            <p>
+              From minimalist sculptures to minimalist paintings, this blog will
+              inspire you to appreciate the beauty that lies in simplicity.
+            </p>
+          </div>
         </div>
+        <div class="small">
+          <p>Annie Spratt</p>
+        </div>
+      </div>
     </section>
-</body>
+  </body>
 </html>
